force-app/main/default/objects/Credit_Memo__c/fields/CreditMemoId__c.field-meta.xml
<CustomField>
    <fullName>CreditMemoId__c</fullName>
    <externalId>true</externalId>
    <label>CreditMemoId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>