force-app/main/default/objects/Credit_Memo__c/fields/CreditReference__c.field-meta.xml
<CustomField>
    <fullName>CreditReference__c</fullName>
    <label>CreditReference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>