force-app/main/default/objects/Credit_Memo__c/fields/CreditType__c.field-meta.xml
<CustomField>
    <fullName>CreditType__c</fullName>
    <label>CreditType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>FLEXcon</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>