force-app/main/default/objects/Credit_Memo__c/fields/GSTTax__c.field-meta.xml
<CustomField>
    <fullName>GSTTax__c</fullName>
    <label>GSTTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>