force-app/main/default/objects/Credit_Memo__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <label>InvoiceDate</label>
    <type>DateTime</type>
</CustomField>