force-app/main/default/objects/Credit_Memo__c/fields/LessDiscountTaken__c.field-meta.xml
<CustomField>
    <fullName>LessDiscountTaken__c</fullName>
    <label>LessDiscountTaken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>