force-app/main/default/objects/Credit_Memo__c/fields/ProductAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductAmount__c</fullName>
    <label>ProductAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>