force-app/main/default/objects/Credit_Memo__c/fields/PSTTax__c.field-meta.xml
<CustomField>
    <fullName>PSTTax__c</fullName>
    <label>PSTTax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>