force-app/main/default/objects/Credit_Memo__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <label>PurchaseOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>