force-app/main/default/objects/Credit_Memo__c/fields/SEQID__c.field-meta.xml
<CustomField>
    <fullName>SEQID__c</fullName>
    <label>SEQID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>